       	  flexible getExecutorService() and wrapExecutorService() 
       	  methods. Suggested by Tim Peierls.
       	- Clarified Javadocs for static getCurrent() methods. Suggested
       	  by Patrick Logan.
       	- Replaced Map<String, Object> parameters by Map<String, ?>
       	  in Template and Resolver classed. Suggested by Leigh Klotz.
    - NRE and Extension Enhancements
        - Added a static HttpServletRequest getRequest(Request) method
          to the Servlet extension.
        - DirectoryResource now exposes isDirectoryTarget() and 
          isFileTarget() methods. Suggested by Jean-Yves Cronier.
        - Enhanced WADL extension to support all WADL description 
          properties and both formatting and parsing. Also added new
          WadlRepresentation and WadlResource classes to facilitate the
          description of Resources as WADL documents. 
          Sponsored by NetDev Ltd (http://www.netdev.co.uk).
        - The Apache HTTP Client extension can now have a retry handler
          parameter set. Suggested by Sanjay Acharya.
        - Added a "sslContextFactory" parameter to HTTPS connector to 
          improve the flexibility of SSL configuration. If this parameter
          isn't set, the previous parameters are used instead. 
          Contributed by Bruno Harbulot.
        - Exceptions occuring while writing the response entities are 
          now reported as severe errors instead of just info messages.
          Broken connections are still reported as info messages to 
          reduce log size. Contributed by Bruno Dumon.
    - Misc
        - Refactored WAR client to remove remaining class in NRE core.
        - Updated GWT JAR to 1.5 RC1

- 1.1 Milestone 4 (2008-05-20)
    - Bugs fixed
        - Fixed NPE with internal HTTP server when no reason phrase is
          available for the response status. Reported by Stephan Koops.
        - Fixed potential NPE in request processing code when a request