@@ -151,7 +151,7 @@ public class Router extends Restlet {
      * Constructor.
      * 
      * @param context
-     *                The context.
+     *            The context.
      */
     public Router(Context context) {
         super(context);
@@ -171,7 +171,7 @@ public class Router extends Restlet {
      * route will be added routing to the target when any call is received.
      * 
      * @param target
-     *                The target Restlet to attach.
+     *            The target Restlet to attach.
      * @return The created route.
      */
     public Route attach(Restlet target) {
@@ -184,10 +184,10 @@ public class Router extends Restlet {
      * a URI matching the pattern will be received.
      * 
      * @param uriPattern
-     *                The URI pattern that must match the relative part of the
-     *                resource URI.
+     *            The URI pattern that must match the relative part of the
+     *            resource URI.
      * @param targetClass
-     *                The target Resource class to attach.
+     *            The target Resource class to attach.
      * @return The created route.
      */
     public Route attach(String uriPattern, Class<? extends Resource> targetClass) {
@@ -200,10 +200,10 @@ public class Router extends Restlet {
      * matching the pattern will be received.
      * 
      * @param uriPattern
-     *                The URI pattern that must match the relative part of the
-     *                resource URI.
+     *            The URI pattern that must match the relative part of the
+     *            resource URI.
      * @param target
-     *                The target Restlet to attach.
+     *            The target Restlet to attach.
      * @return The created route.
      */
     public Route attach(String uriPattern, Restlet target) {
@@ -218,7 +218,7 @@ public class Router extends Restlet {
      * calls to 1.0.
      * 
      * @param defaultTargetClass
-     *                The target Resource class to attach.
+     *            The target Resource class to attach.
      * @return The created route.
      */
     public Route attachDefault(Class<? extends Resource> defaultTargetClass) {
@@ -231,7 +231,7 @@ public class Router extends Restlet {
      * 1.0.
      * 
      * @param defaultTarget
-     *                The Restlet to use as the default target.
+     *            The Restlet to use as the default target.
      * @return The created route.
      */
     public Route attachDefault(Restlet defaultTarget) {
@@ -244,7 +244,7 @@ public class Router extends Restlet {
      * Creates a new finder instance based on the "targetClass" property.
      * 
      * @param targetClass
-     *                The target Resource class to attach.
+     *            The target Resource class to attach.
      * @return The new finder instance.
      */
     private Finder createFinder(Class<? extends Resource> targetClass) {
@@ -271,10 +271,10 @@ public class Router extends Restlet {
      * Creates a new route for the given URI pattern and target.
      * 
      * @param uriPattern
-     *                The URI pattern that must match the relative part of the
-     *                resource URI.
+     *            The URI pattern that must match the relative part of the
+     *            resource URI.
      * @param target
-     *                The target Restlet to attach.
+     *            The target Restlet to attach.
      * @return The created route.
      */
     protected Route createRoute(String uriPattern, Restlet target) {
@@ -290,7 +290,7 @@ public class Router extends Restlet {
      * to null.
      * 
      * @param target
-     *                The target Restlet to detach.
+     *            The target Restlet to detach.
      */
     public void detach(Restlet target) {
         getRoutes().removeAll(target);
@@ -305,9 +305,9 @@ public class Router extends Restlet {
      * implementation (to be overriden), returns null.
      * 
      * @param request
-     *                The request to handle.
+     *            The request to handle.
      * @param response
-     *                The response to update.
+     *            The response to update.
      * @return The matched route if available or null.
      */
     protected Route getCustom(Request request, Response response) {
@@ -316,7 +316,7 @@ public class Router extends Restlet {
 
     /**
      * Returns the default matching mode to use when selecting routes based on
-     * URIs.
+     * URIs. By default it returns {@link Template#MODE_STARTS_WITH}.
      * 
      * @return The default matching mode.
      */
@@ -371,9 +371,9 @@ public class Router extends Restlet {
      * Returns the next Restlet if available.
      * 
      * @param request
-     *                The request to handle.
+     *            The request to handle.
      * @param response
-     *                The response to update.
+     *            The response to update.
      * @return The next Restlet if available or null.
      */
     public Restlet getNext(Request request, Response response) {
@@ -481,9 +481,9 @@ public class Router extends Restlet {
      * Handles a call by invoking the next Restlet if it is available.
      * 
      * @param request
-     *                The request to handle.
+     *            The request to handle.
      * @param response
-     *                The response to update.
+     *            The response to update.
      */
     @Override
     public void handle(Request request, Response response) {
@@ -502,7 +502,7 @@ public class Router extends Restlet {
      * URIs.
      * 
      * @param defaultMatchingMode
-     *                The default matching mode.
+     *            The default matching mode.
      */
     public void setDefaultMatchingMode(int defaultMatchingMode) {
         this.defaultMatchingMode = defaultMatchingMode;
@@ -513,8 +513,8 @@ public class Router extends Restlet {
      * with or without taking into account query string.
      * 
      * @param defaultMatchQuery
-     *                The default setting for whether the routing should be done
-     *                on URIs with or without taking into account query string.
+     *            The default setting for whether the routing should be done on
+     *            URIs with or without taking into account query string.
      */
     public void setDefaultMatchQuery(boolean defaultMatchQuery) {
         this.defaultMatchQuery = defaultMatchQuery;
@@ -524,7 +524,7 @@ public class Router extends Restlet {
      * Sets the default route tested if no other one was available.
      * 
      * @param defaultRoute
-     *                The default route tested if no other one was available.
+     *            The default route tested if no other one was available.
      */
     public void setDefaultRoute(Route defaultRoute) {
         this.defaultRoute = defaultRoute;
@@ -534,7 +534,7 @@ public class Router extends Restlet {
      * Sets the finder class to instantiate.
      * 
      * @param finderClass
-     *                The finder class to instantiate.
+     *            The finder class to instantiate.
      */
     public void setFinderClass(Class<? extends Finder> finderClass) {
         this.finderClass = finderClass;
@@ -546,7 +546,7 @@ public class Router extends Restlet {
      * and therefore could change on a retry.
      * 
      * @param maxAttempts
-     *                The maximum number of attempts.
+     *            The maximum number of attempts.
      */
     public void setMaxAttempts(int maxAttempts) {
         this.maxAttempts = maxAttempts;
@@ -556,7 +556,7 @@ public class Router extends Restlet {
      * Sets the score required to have a match.
      * 
      * @param score
-     *                The score required to have a match.
+     *            The score required to have a match.
      */
     public void setRequiredScore(float score) {
         this.requiredScore = score;
@@ -566,7 +566,7 @@ public class Router extends Restlet {
      * Sets the delay (in seconds) before a new attempt.
      * 
      * @param retryDelay
-     *                The delay (in seconds) before a new attempt.
+     *            The delay (in seconds) before a new attempt.
      */
     public void setRetryDelay(long retryDelay) {
         this.retryDelay = retryDelay;
@@ -576,7 +576,7 @@ public class Router extends Restlet {
      * Sets the modifiable list of routes.
      * 
      * @param routes
-     *                The modifiable list of routes.
+     *            The modifiable list of routes.
      */
     public void setRoutes(RouteList routes) {
         this.routes = routes;
@@ -586,7 +586,7 @@ public class Router extends Restlet {
      * Sets the routing mode.
      * 
      * @param routingMode
-     *                The routing mode.
+     *            The routing mode.
      */
     public void setRoutingMode(int routingMode) {
         this.routingMode = routingMode;
